fix spacing for radio/checkbox labels on mobile"

--- a/styles/desktop.css
+++ b/styles/desktop.css
@@ -233,10 +233,6 @@
         max-width: 229px;
     }
 
-    #custom-pronoun-field {
-        transform: translateX(-7px);
-    }
-
     #custom-pronoun {
         width: 100%;
         max-width: 169px;
